<?xml version = "1.0" encoding = "utf-8"?>

<ScrollView
	xmlns:android = "http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout 
	  android:layout_width  = "fill_parent"
	  android:layout_height = "wrap_content"
	  android:orientation   = "vertical"
	  android:background="#ccec75">
		<!-- android:background	= "@drawable/path" -->

		<!-- TITLE -->
		<TextView
			style = "@style/title"
			android:text = "@string/text_register"
			android:layout_gravity = "center"/>

		<!-- NAME -->
		<TextView
			style = "@style/textInfo"
			android:text  = "@string/text_name"/>

		<EditText
			style = "@style/textInput"
			android:id = "@+id/name"
			android:hint = "@string/text_name_hint"                      
			android:drawableLeft = "@drawable/ic_name"/> 

		<!-- EMAIL -->
		<TextView
			style = "@style/textInfo"
			android:text  = "@string/text_email"/>

		<EditText
			style = "@style/textInput"
			android:id    = "@+id/email"
			android:hint  = "@string/text_email_hint"
			android:inputType = "textEmailAddress"
			android:drawableLeft="@drawable/ic_email"/>
		
		<!-- AGE -->
		<TextView
			style = "@style/textInfo"
			android:text  = "@string/text_age"/>

		<EditText
		    android:id="@+id/age_user"
		    style="@style/textInput"
		    android:drawableLeft="@drawable/ic_email"
		    android:hint="@string/text_age_hint"
		    android:inputType="number" />

		<!-- EDUCATION LEVEL -->
		<LinearLayout 
			android:layout_width  = "fill_parent"
			android:layout_height = "fill_parent"
			android:orientation   = "horizontal">
			
			<LinearLayout 
				android:layout_width  = "wrap_content"
				android:layout_height = "wrap_content"
				android:orientation   = "vertical">
				<TextView
					style = "@style/textInfo"
					android:text = "@string/text_education"/>
			
				<RadioGroup
					android:id="@+id/radiogroup_education"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<RadioButton
						android:id="@+id/radio_elementarySchool"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:checked="true"
						android:text="@string/text_elementary_school" />

					<RadioButton
						android:id="@+id/radio_highSchool"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/text_high_school" />

					<RadioButton
						android:id="@+id/radio_graduated"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/text_graduated" />
				</RadioGroup>
			</LinearLayout>
			<!-- SEX -->
			<LinearLayout 
				android:layout_width  = "wrap_content"
				android:layout_height = "wrap_content"
				android:orientation   = "vertical">
				<TextView
					style = "@style/textInfo"
					android:text = "@string/text_sex"/>
				
				<RadioGroup
					android:id="@+id/radiogroup_sex"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="18dp" >
			
					<RadioButton
						android:id="@+id/radio_male"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:checked="true"
						android:text="@string/text_sex_male" />
			
					<RadioButton
						android:id="@+id/radio_female"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/text_sex_female" />
				</RadioGroup>
			</LinearLayout>
		</LinearLayout>
		<!-- USER -->
		<TextView
			style = "@style/textInfo"
			android:text  = "@string/text_username"/>
		
		<EditText
			style = "@style/textInput"
			android:id = "@+id/user_login"
			android:hint = "@string/text_user_hint"                      
			android:drawableLeft = "@drawable/ic_name"/> 
		
		<!-- PASSWORD -->
		<TextView
			style = "@style/textInfo"
			android:text  = "@string/text_password"/>

		<EditText
			style = "@style/textInput"
			android:id    = "@+id/password"
			android:hint  = "@string/text_password_hint" 
			android:inputType = "textPassword"
			android:drawableLeft = "@drawable/ic_password"/>

		<!-- CONFIRM BUTTON -->
			<Button
			style="@style/defaultButton"
			android:id  = "@+id/confirm"
			android:layout_gravity = "center"
			android:text  = "@string/text_register"
			android:layout_marginTop = "15dp"/>

	</LinearLayout>
</ScrollView>
