<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android = "http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#d2d2d2" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <EditText
	        android:id="@+id/editText_editName"
	        style="@style/textInput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/text_name"
	        android:inputType="textPersonName" />
	
	    <EditText
	        android:id="@+id/editText_editEmail"
	        style="@style/textInput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginTop = "2dp"
	        android:hint="@string/text_email"
	        android:inputType="textEmailAddress" />
	
	    <EditText
	        android:id="@+id/editText_editAge"
	        style="@style/textInput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginTop = "2dp"
	        android:hint="@string/text_age"
	        android:inputType="number" />
	    
	     <TextView
			style = "@style/textInfo"
			android:layout_marginTop = "2dp"
			android:text = "@string/text_education"/>
	
	    <RadioGroup
	        android:id="@+id/radioGroup_editEducation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop = "2dp" >
	
	        <RadioButton
	            android:id="@+id/radio_editElementarySchool"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/text_elementary_school" />
	
	        <RadioButton
	            android:id="@+id/radio_editHighSchool"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/text_high_school" />
	
	        <RadioButton
	            android:id="@+id/radio_editGraduated"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/text_graduated" />
	    </RadioGroup>
	    
	     <TextView
			style = "@style/textInfo"
			android:text = "@string/text_sex"
			android:layout_marginTop = "2dp" />
	
	    <RadioGroup
			android:id="@+id/radiogroup_editSex"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginTop = "2dp" >
	
	        <RadioButton
	            android:id="@+id/radio_editMale"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/text_sex_male" />
	
	        <RadioButton
	            android:id="@+id/radio_editFemale"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/text_sex_female" />
	    </RadioGroup>
	
	    <EditText
	        android:id="@+id/editText_oldPassword"
	        style="@style/textInput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginTop = "2dp"
	        android:hint="@string/text_old_password"
	        android:inputType="textPassword" />
	
	    <EditText
	        android:id="@+id/editText_newPassword"
	        style="@style/textInput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginTop = "2dp"
	        android:hint="@string/text_new_password"
	        android:inputType="textPassword" />
	
	    <Button
	        android:id="@+id/button_save"
	        style="@style/defaultButton"
	        android:layout_width="165dp"
	        android:layout_gravity = "center"
	        android:layout_height="wrap_content"
	        android:layout_marginTop = "2dp"
	        android:text="@string/text_save" />
	
	    <TextView
	        android:id="@+id/passwordWarning"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop = "2dp"
	        android:text="@string/passwordWarning" />
	
	</LinearLayout>
	
</ScrollView>
